update example and add more warnings

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -57,6 +57,15 @@
             "args": [],
             "cwd": "${workspaceFolder}",
             "preLaunchTask": "CMake: build"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Vulkan Setup Example",
+            "program": "${workspaceFolder}/build/Debug/examples/vulkan_setup",
+            "args": [],
+            "cwd": "${workspaceFolder}",
+            "preLaunchTask": "CMake: build"
         }
     ]
 }
