--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -75,6 +75,15 @@
             "args": [],
             "cwd": "${workspaceFolder}",
             "preLaunchTask": "CMake: build"
-        }
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Wavefront Example",
+            "program": "${workspaceFolder}/build/Debug/examples/wavefront",
+            "args": [],
+            "cwd": "${workspaceFolder}",
+            "preLaunchTask": "CMake: build"
+        },
     ]
 }
