--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -85,5 +85,14 @@
             "cwd": "${workspaceFolder}",
             "preLaunchTask": "CMake: build"
         },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Wavefront ISF Example",
+            "program": "${workspaceFolder}/build/Debug/examples/wavefront_isf",
+            "args": [],
+            "cwd": "${workspaceFolder}",
+            "preLaunchTask": "CMake: build"
+        },
     ]
 }
